RESOLVED FIXED183173
ASSERTION FAILED: matchContextualKeyword(m_vm->propertyNames->async)
https://bugs.webkit.org/show_bug.cgi?id=183173
Summary ASSERTION FAILED: matchContextualKeyword(m_vm->propertyNames->async)
André Bargull
Reported 2018-02-27 12:35:55 PST
SVN: rev228977 Build with: perl Tools/Scripts/build-jsc --jsc-only --debug Executing the following test case leads to this assertion: --- ASSERTION FAILED: matchContextualKeyword(m_vm->propertyNames->async) ../../Source/JavaScriptCore/parser/Parser.cpp(3640) : typename TreeBuilder::Expression JSC::Parser<LexerType>::parseAssignmentExpression(TreeBuilder&, JSC::Parser<LexerType>::ExpressionErrorClassifier&) [with TreeBuilder = JSC::ASTBuilder; LexerType = JSC::Lexer<unsigned char>; typename TreeBuilder::Expression = JSC::ExpressionNode*] 1 0x7f2e5603f705 WTFCrash 2 0x7f2e55b08569 JSC::ASTBuilder::Expression JSC::Parser<JSC::Lexer<unsigned char> >::parseAssignmentExpression<JSC::ASTBuilder>(JSC::ASTBuilder&, JSC::Parser<JSC::Lexer<unsigned char> >::ExpressionErrorClassifier&) 3 0x7f2e55af0da2 JSC::ASTBuilder::Expression JSC::Parser<JSC::Lexer<unsigned char> >::parseAssignmentExpression<JSC::ASTBuilder>(JSC::ASTBuilder&) 4 0x7f2e55b32470 JSC::ASTBuilder::Expression JSC::Parser<JSC::Lexer<unsigned char> >::parseExpression<JSC::ASTBuilder>(JSC::ASTBuilder&) 5 0x7f2e55b39716 JSC::ASTBuilder::Statement JSC::Parser<JSC::Lexer<unsigned char> >::parseExpressionStatement<JSC::ASTBuilder>(JSC::ASTBuilder&) 6 0x7f2e55b0eb2f JSC::ASTBuilder::Statement JSC::Parser<JSC::Lexer<unsigned char> >::parseStatement<JSC::ASTBuilder>(JSC::ASTBuilder&, JSC::Identifier const*&, unsigned int*) 7 0x7f2e55af358d JSC::ASTBuilder::Statement JSC::Parser<JSC::Lexer<unsigned char> >::parseStatementListItem<JSC::ASTBuilder>(JSC::ASTBuilder&, JSC::Identifier const*&, unsigned int*) 8 0x7f2e55adab62 JSC::ASTBuilder::SourceElements JSC::Parser<JSC::Lexer<unsigned char> >::parseSourceElements<JSC::ASTBuilder>(JSC::ASTBuilder&, JSC::SourceElementsMode) 9 0x7f2e55ac308b JSC::Parser<JSC::Lexer<unsigned char> >::parseInner(JSC::Identifier const&, JSC::SourceParseMode) 10 0x7f2e54f107cc std::unique_ptr<JSC::ProgramNode, std::default_delete<JSC::ProgramNode> > JSC::Parser<JSC::Lexer<unsigned char> >::parse<JSC::ProgramNode>(JSC::ParserError&, JSC::Identifier const&, JSC::SourceParseMode) 11 0x7f2e54f0b105 std::unique_ptr<JSC::ProgramNode, std::default_delete<JSC::ProgramNode> > JSC::parse<JSC::ProgramNode>(JSC::VM*, JSC::SourceCode const&, JSC::Identifier const&, JSC::JSParserBuiltinMode, JSC::JSParserStrictMode, JSC::JSParserScriptMode, JSC::SourceParseMode, JSC::SuperBinding, JSC::ParserError&, JSC::JSTextPosition*, JSC::ConstructorKind, JSC::DerivedContextType, JSC::EvalContextType, JSC::DebuggerParseData*) ... --- Test case: --- void class extends async()=>{}/a/g {} ---
Attachments
Patch (3.59 KB, patch)
2018-03-01 01:55 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2018-03-01 01:55:15 PST
Saam Barati
Comment 2 2018-03-01 15:23:05 PST
WebKit Commit Bot
Comment 3 2018-03-01 21:55:43 PST
Comment on attachment 334803 [details] Patch Clearing flags on attachment: 334803 Committed r229162: <https://trac.webkit.org/changeset/229162>
WebKit Commit Bot
Comment 4 2018-03-01 21:55:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.