ASSERTION FAILED: matchContextualKeyword(m_vm->propertyNames->async) https://bugs.webkit.org/show_bug.cgi?id=183173

Reviewed by Saam Barati.

JSTests:

* stress/async-arrow-function-in-class-heritage.js: Added.
(testSyntax):
(testSyntaxError):
(SyntaxError):

Source/JavaScriptCore:

Classifier could propagate an error which does not occur at the first token
of the given expression. We should check whether the given token is "async"
instead of assertion.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseAssignmentExpression):


Canonical link: https://commits.webkit.org/198945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229162 268f45cc-cd09-0410-ab3c-d52691b4dbfc